# blastmini

./: .gitignore  README.md
SRC/: core.py  io.py  stats.py
blastmini/: README.md  blastmini_demo.ipynb  environment.yml  pyproject.toml  results.tsv  toy_db.fasta  toy_query.fasta
blastmini/src/blastmini/: cli.py  core.py  io.py  stats.py
blastmini/src/blastmini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: README_data.md
data/test_queries/: seq_1_glucagon.fasta  seq_2_ubiquitin.fasta  seq_3_hemoglobin.fasta  seq_4_gfp.fasta  seq_5_albumin.fasta
src/: __init__.py  cli.py
