[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blastmini"
version = "0.1.0"
description = "A mini BLAST implementation for sequence similarity search"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
blastmini = "blastmini.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
